--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=your-secret-here-change-this-in-production
+APP_SECRET=a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2w3x4y5z6
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://symfony:symfony@db:3306/kpi_tracker?serverVersion=mariadb-latest"
+DATABASE_URL="mysql://symfony:symfony@db:3306/kpi_tracker?serverVersion=mariadb-latest&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://user:pass@localhost:587
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
