feat: Initialize Symfony project with essential configuration files
- Added cache configuration in `config/packages/cache.yaml`
- Set up debug configuration for development in `config/packages/debug.yaml`
- Configured Doctrine migrations in `config/packages/doctrine_migrations.yaml`
- Integrated Monolog for logging in `config/packages/monolog.yaml`
- Defined routing settings in `config/packages/routing.yaml`
- Established validation settings in `config/packages/validator.yaml`
- Configured web profiler settings in `config/packages/web_profiler.yaml`
- Set up Webpack Encore configuration in `config/packages/webpack_encore.yaml`
- Created preload script in `config/preload.php`
- Defined routes in `config/routes.yaml` and related files
- Configured services in `config/services.yaml`
- Updated Docker Compose file to include PostgreSQL database service
- Created necessary `.gitignore` files in migrations, controller, entity, and repository directories
- Added initial PHPUnit configuration in `phpunit.dist.xml`
- Created sample data fixtures in `src/DataFixtures/AppFixtures.php`
- Initialized Symfony lock file with dependencies
- Updated base template to include Webpack Encore assets
- Added bootstrap file for tests
- Configured Webpack with entry points and optimizations in `webpack.config.js`

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ backup_*.sql
 
 # Docker
 /.docker/
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
