--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/phpunit-bridge": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/debug-bundle": "7.0.*",
+        "symfony/maker-bundle": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.48",
         "doctrine/doctrine-fixtures-bundle": "^3.5"
     },
