--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_SECRET=a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2w3x4y5z6
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://symfony:symfony@db:3306/kpi_tracker?serverVersion=mariadb-latest&charset=utf8mb4"
+DATABASE_URL="mysql://symfony:symfony@db:3306/kpi_tracker?serverVersion=mariadb-10.4.14&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
