--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
         image: mariadb:10.11
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: kpi_tracker_test
           MYSQL_USER: symfony
           MYSQL_PASSWORD: symfony
         ports:
@@ -55,6 +54,10 @@ jobs:
           echo "Waiting for MySQL... ($i/30)"
           sleep 2
         done
+
+    - name: Grant Database Privileges
+      run: |
+        mysql -h 127.0.0.1 -u root -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'symfony'@'%'; FLUSH PRIVILEGES;"
 
     - name: Create Database
       env:
