Allow risky fixes in PHP CS Fixer step of CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         file: ./coverage.xml
 
     - name: Run PHP CS Fixer
-      run: ./vendor/bin/php-cs-fixer fix --dry-run --diff
+      run: ./vendor/bin/php-cs-fixer fix --dry-run --diff --allow-risky=yes
 
   security:
     runs-on: ubuntu-latest
