--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,6 +11,9 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        controller_resolver:
+            auto_mapping: false
+        enable_lazy_ghost_objects: true
         mappings:
             App:
                 is_bundle: false
