Add Excel export of all KPI values

--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,20 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "phpoffice/phpspreadsheet": "^4.4",
+        "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/mailer": "7.3.*",
         "symfony/runtime": "7.3.*",
-        "symfony/yaml": "7.3.*",
         "symfony/security-bundle": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
-        "symfony/form": "7.3.*",
         "symfony/validator": "7.3.*",
-        "symfony/mailer": "7.3.*",
-        "symfony/asset": "7.3.*",
-        "symfony/webpack-encore-bundle": "^2.0"
+        "symfony/webpack-encore-bundle": "^2.0",
+        "symfony/yaml": "7.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5",
