--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DATABASE_URL="mysql://symfony:symfony@db:3306/kpi_tracker?serverVersion=mariadb-
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+MAILER_DSN=smtp://mailhog:1025
 ###< symfony/mailer ###
