--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,8 +11,10 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
-# Removed invalid controller_resolver configuration
+        controller_resolver:
+            auto_mapping: false
         enable_lazy_ghost_objects: true
+        report_fields_where_declared: true
         mappings:
             App:
                 is_bundle: false
