--- a/config/packages/web_profiler.yaml
+++ b/config/packages/web_profiler.yaml
@@ -4,7 +4,7 @@ when@dev:
 
     framework:
         profiler:
-            collect_serializer_data: true
+            collect_serializer_data: false
 
 when@test:
     framework:
